--- a/contatooh/public/index.html
+++ b/contatooh/public/index.html
@@ -16,5 +16,6 @@
     <script src="js/main.js"></script>
     <script src="js/controllers/ContatosController.js"></script>
     <script src="js/controllers/ContatoController.js"></script>
+    <script src="js/services/ContatoService.js"></script>
 </body>
 </html>
